// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[0] INPUT 1`] = `
{
  "action": "in_progress",
  "organization": {
    "avatar_url": "https://avatars.githubusercontent.com/u/21031067?s=460&u=d851e01410b4f1674f000ba7e0dc94e0b82cd9cc&v=4",
    "description": "octo-org",
    "events_url": "https://api.github.com/orgs/octo-org/events",
    "hooks_url": "https://api.github.com/orgs/octo-org/hooks",
    "id": 33435655,
    "issues_url": "https://api.github.com/orgs/octo-org/issues",
    "login": "octo-org",
    "members_url": "https://api.github.com/orgs/octo-org/members{/member}",
    "node_id": "MDEyOk9yZ2FuaXphdGlvbjMzNDM1Nj55",
    "public_members_url": "https://api.github.com/orgs/octo-org/public_members{/member}",
    "repos_url": "https://api.github.com/orgs/octo-org/repos",
    "url": "https://api.github.com/orgs/octo-org",
  },
  "repository": {
    "archive_url": "https://api.github.com/repos/octo-org/example-workflow/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/octo-org/example-workflow/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/octo-org/example-workflow/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/octo-org/example-workflow/branches{/branch}",
    "clone_url": "https://github.com/octo-org/example-workflow.git",
    "collaborators_url": "https://api.github.com/repos/octo-org/example-workflow/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/octo-org/example-workflow/comments{/number}",
    "commits_url": "https://api.github.com/repos/octo-org/example-workflow/commits{/sha}",
    "compare_url": "https://api.github.com/repos/octo-org/example-workflow/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/octo-org/example-workflow/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/octo-org/example-workflow/contributors",
    "created_at": "2021-06-11T13:29:13Z",
    "default_branch": "main",
    "deployments_url": "https://api.github.com/repos/octo-org/example-workflow/deployments",
    "description": "Test workflow",
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/octo-org/example-workflow/downloads",
    "events_url": "https://api.github.com/repos/octo-org/example-workflow/events",
    "fork": false,
    "forks": 0,
    "forks_count": 0,
    "forks_url": "https://api.github.com/repos/octo-org/example-workflow/forks",
    "full_name": "octo-org/example-workflow",
    "git_commits_url": "https://api.github.com/repos/octo-org/example-workflow/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/octo-org/example-workflow/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/octo-org/example-workflow/git/tags{/sha}",
    "git_url": "git://github.com/octo-org/example-workflow.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": false,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/octo-org/example-workflow/hooks",
    "html_url": "https://github.com/octo-org/example-workflow",
    "id": 376034443,
    "issue_comment_url": "https://api.github.com/repos/octo-org/example-workflow/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/octo-org/example-workflow/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/octo-org/example-workflow/issues{/number}",
    "keys_url": "https://api.github.com/repos/octo-org/example-workflow/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/octo-org/example-workflow/labels{/name}",
    "language": null,
    "languages_url": "https://api.github.com/repos/octo-org/example-workflow/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/octo-org/example-workflow/merges",
    "milestones_url": "https://api.github.com/repos/octo-org/example-workflow/milestones{/number}",
    "mirror_url": null,
    "name": "example-workflow",
    "node_id": "MDEwOlJlcG9zaXRvcnkzNzYwMzQ0ND55",
    "notifications_url": "https://api.github.com/repos/octo-org/example-workflow/notifications{?since,all,participating}",
    "open_issues": 0,
    "open_issues_count": 0,
    "owner": {
      "avatar_url": "https://avatars.githubusercontent.com/u/21031067?s=460&u=d851e01410b4f1674f000ba7e0dc94e0b82cd9cc&v=4",
      "events_url": "https://api.github.com/users/octo-org/events{/privacy}",
      "followers_url": "https://api.github.com/users/octo-org/followers",
      "following_url": "https://api.github.com/users/octo-org/following{/other_user}",
      "gists_url": "https://api.github.com/users/octo-org/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/octo-org",
      "id": 33435655,
      "login": "octo-org",
      "node_id": "MDEyOk9yZ2FuaXphdGlvbjMzNDM1Nj55",
      "organizations_url": "https://api.github.com/users/octo-org/orgs",
      "received_events_url": "https://api.github.com/users/octo-org/received_events",
      "repos_url": "https://api.github.com/users/octo-org/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/octo-org/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/octo-org/subscriptions",
      "type": "Organization",
      "url": "https://api.github.com/users/octo-org",
    },
    "private": true,
    "pulls_url": "https://api.github.com/repos/octo-org/example-workflow/pulls{/number}",
    "pushed_at": "2021-06-11T13:32:58Z",
    "releases_url": "https://api.github.com/repos/octo-org/example-workflow/releases{/id}",
    "size": 1,
    "ssh_url": "git@github.com:octo-org/example-workflow.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/octo-org/example-workflow/stargazers",
    "statuses_url": "https://api.github.com/repos/octo-org/example-workflow/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/octo-org/example-workflow/subscribers",
    "subscription_url": "https://api.github.com/repos/octo-org/example-workflow/subscription",
    "svn_url": "https://github.com/octo-org/example-workflow",
    "tags_url": "https://api.github.com/repos/octo-org/example-workflow/tags",
    "teams_url": "https://api.github.com/repos/octo-org/example-workflow/teams",
    "trees_url": "https://api.github.com/repos/octo-org/example-workflow/git/trees{/sha}",
    "updated_at": "2021-06-11T13:33:01Z",
    "url": "https://api.github.com/repos/octo-org/example-workflow",
    "watchers": 0,
    "watchers_count": 0,
  },
  "sender": {
    "avatar_url": "https://avatars.githubusercontent.com/u/21031067?s=460&u=d851e01410b4f1674f000ba7e0dc94e0b82cd9cc&v=4",
    "events_url": "https://api.github.com/users/octocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/octocat/followers",
    "following_url": "https://api.github.com/users/octocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/octocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/octocat",
    "id": 319655,
    "login": "octocat",
    "node_id": "MDQ6VXNlcjMxOTY1NQ55",
    "organizations_url": "https://api.github.com/users/octocat/orgs",
    "received_events_url": "https://api.github.com/users/octocat/received_events",
    "repos_url": "https://api.github.com/users/octocat/repos",
    "site_admin": true,
    "starred_url": "https://api.github.com/users/octocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/octocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/octocat",
  },
  "workflow_job": {
    "check_run_url": "https://api.github.com/repos/octo-org/example-workflow/check-runs/2832853555",
    "completed_at": null,
    "conclusion": null,
    "head_sha": "e3103f8eb03e1ad7f2331c5446b23c070fc54055",
    "html_url": "https://github.com/octo-org/example-workflow/runs/2832853555",
    "id": 2832853555,
    "labels": [
      "gpu",
      "db-app",
      "dc-03",
    ],
    "name": "Test workflow",
    "node_id": "MDg6Q2hlY2tSdW4yODMyODUzNT55",
    "run_id": 940463255,
    "run_url": "https://api.github.com/repos/octo-org/example-workflow/actions/runs/940463255",
    "runner_group_id": 2,
    "runner_group_name": "my runner group",
    "runner_id": 1,
    "runner_name": "my runner",
    "started_at": "2021-06-15T19:22:27Z",
    "status": "in_progress",
    "steps": [
      {
        "completed_at": null,
        "conclusion": null,
        "name": "Set up job",
        "number": 1,
        "started_at": "2021-06-15T19:22:27.000Z",
        "status": "in_progress",
      },
    ],
    "url": "https://api.github.com/repos/octo-org/example-workflow/actions/jobs/2832853555",
  },
}
`;

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[0] OUTPUT 1`] = `undefined`;

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[1] INPUT 1`] = `
{
  "action": "completed",
  "organization": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/38302899?v=4",
    "description": "",
    "events_url": "https://api.github.com/orgs/Octocoders/events",
    "hooks_url": "https://api.github.com/orgs/Octocoders/hooks",
    "id": 38302899,
    "issues_url": "https://api.github.com/orgs/Octocoders/issues",
    "login": "Octocoders",
    "members_url": "https://api.github.com/orgs/Octocoders/members{/member}",
    "node_id": "MDEyOk9yZ2FuaXphdGlvbjM4MzAyODk5",
    "public_members_url": "https://api.github.com/orgs/Octocoders/public_members{/member}",
    "repos_url": "https://api.github.com/orgs/Octocoders/repos",
    "url": "https://api.github.com/orgs/Octocoders",
  },
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 0,
    "forks_count": 0,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": null,
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/38302899?v=4",
      "events_url": "https://api.github.com/users/Octocoders/events{/privacy}",
      "followers_url": "https://api.github.com/users/Octocoders/followers",
      "following_url": "https://api.github.com/users/Octocoders/following{/other_user}",
      "gists_url": "https://api.github.com/users/Octocoders/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Octocoders",
      "id": 38302899,
      "login": "Octocoders",
      "node_id": "MDEyOk9yZ2FuaXphdGlvbjM4MzAyODk5",
      "organizations_url": "https://api.github.com/users/Octocoders/orgs",
      "received_events_url": "https://api.github.com/users/Octocoders/received_events",
      "repos_url": "https://api.github.com/users/Octocoders/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Octocoders/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Octocoders/subscriptions",
      "type": "Organization",
      "url": "https://api.github.com/users/Octocoders",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:32Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:19:27Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
  "workflow_job": {
    "check_run_url": "https://api.github.com/repos/octo-org/octo-repo/check-runs/1291536064",
    "completed_at": "2021-08-05T10:38:16Z",
    "conclusion": "failure",
    "created_at": "2021-08-05T10:33:58Z",
    "head_branch": "main",
    "head_sha": "3484a3fb816e0859fd6e1cea078d76385ff50625",
    "html_url": "https://github.com/octo-org/octo-repo/runs/1291536064",
    "id": 289782451,
    "labels": [
      "ubuntu-latest",
    ],
    "name": "linters",
    "node_id": "MDExOldvcmtmbG93UnVuMjg5NzgyNDUx",
    "run_attempt": 1,
    "run_id": 2202229078,
    "run_url": "https://api.github.com/repos/octo-org/octo-repo/actions/runs/1291536064",
    "runner_group_id": 2,
    "runner_group_name": "GitHub Actions",
    "runner_id": 5,
    "runner_name": "GitHub Actions 5",
    "started_at": "2021-08-05T10:34:58Z",
    "status": "completed",
    "steps": [
      {
        "completed_at": "2021-08-05T10:26:11.000Z",
        "conclusion": "success",
        "name": "Set up job",
        "number": 1,
        "started_at": "2021-08-05T10:26:08.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:12.000Z",
        "conclusion": "success",
        "name": "Run actions/checkout@v2",
        "number": 2,
        "started_at": "2021-08-05T10:26:11.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:12.000Z",
        "conclusion": "success",
        "name": "Run actions/setup-node@v2",
        "number": 3,
        "started_at": "2021-08-05T10:26:12.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:12.000Z",
        "conclusion": "success",
        "name": "Get yarn cache directory path",
        "number": 4,
        "started_at": "2021-08-05T10:26:12.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:15.000Z",
        "conclusion": "success",
        "name": "Run actions/cache@v2",
        "number": 5,
        "started_at": "2021-08-05T10:26:12.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:25.000Z",
        "conclusion": "success",
        "name": "Run yarn install",
        "number": 6,
        "started_at": "2021-08-05T10:26:15.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:27.000Z",
        "conclusion": "success",
        "name": "Run yarn run js-lint",
        "number": 7,
        "started_at": "2021-08-05T10:26:25.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:28.000Z",
        "conclusion": "failure",
        "name": "Run yarn run format-check",
        "number": 8,
        "started_at": "2021-08-05T10:26:27.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:28.000Z",
        "conclusion": "skipped",
        "name": "Post Run actions/cache@v2",
        "number": 14,
        "started_at": "2021-08-05T10:26:28.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:28.000Z",
        "conclusion": "skipped",
        "name": "Post Run actions/setup-node@v2",
        "number": 15,
        "started_at": "2021-08-05T10:26:28.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:28.000Z",
        "conclusion": "success",
        "name": "Post Run actions/checkout@v2",
        "number": 16,
        "started_at": "2021-08-05T10:26:28.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:28.000Z",
        "conclusion": "success",
        "name": "Complete job",
        "number": 17,
        "started_at": "2021-08-05T10:26:28.000Z",
        "status": "completed",
      },
    ],
    "url": "https://api.github.com/repos/octo-org/octo-repo/actions/jobs/1291536064",
    "workflow_name": "CodeQL",
  },
}
`;

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[1] OUTPUT 1`] = `
[
  {
    "created_at": 1700000000000,
    "metric_signature": "workflow-job",
    "output": {
      "completed_at": 1628159896000,
      "created_at": 1628159638000,
      "duration": 198000,
      "run_attempt": 1,
      "started_at": 1628159698000,
      "status": "completed",
      "steps": [
        {
          "completed_at": 1628159171000,
          "conclusion": "success",
          "duration": 3000,
          "name": "Set up job",
          "number": 1,
          "started_at": 1628159168000,
          "status": "completed",
        },
        {
          "completed_at": 1628159172000,
          "conclusion": "success",
          "duration": 1000,
          "name": "Run actions/checkout@v2",
          "number": 2,
          "started_at": 1628159171000,
          "status": "completed",
        },
        {
          "completed_at": 1628159172000,
          "conclusion": "success",
          "duration": 0,
          "name": "Run actions/setup-node@v2",
          "number": 3,
          "started_at": 1628159172000,
          "status": "completed",
        },
        {
          "completed_at": 1628159172000,
          "conclusion": "success",
          "duration": 0,
          "name": "Get yarn cache directory path",
          "number": 4,
          "started_at": 1628159172000,
          "status": "completed",
        },
        {
          "completed_at": 1628159175000,
          "conclusion": "success",
          "duration": 3000,
          "name": "Run actions/cache@v2",
          "number": 5,
          "started_at": 1628159172000,
          "status": "completed",
        },
        {
          "completed_at": 1628159185000,
          "conclusion": "success",
          "duration": 10000,
          "name": "Run yarn install",
          "number": 6,
          "started_at": 1628159175000,
          "status": "completed",
        },
        {
          "completed_at": 1628159187000,
          "conclusion": "success",
          "duration": 2000,
          "name": "Run yarn run js-lint",
          "number": 7,
          "started_at": 1628159185000,
          "status": "completed",
        },
        {
          "completed_at": 1628159188000,
          "conclusion": "failure",
          "duration": 1000,
          "name": "Run yarn run format-check",
          "number": 8,
          "started_at": 1628159187000,
          "status": "completed",
        },
        {
          "completed_at": 1628159188000,
          "conclusion": "skipped",
          "duration": 0,
          "name": "Post Run actions/cache@v2",
          "number": 14,
          "started_at": 1628159188000,
          "status": "completed",
        },
        {
          "completed_at": 1628159188000,
          "conclusion": "skipped",
          "duration": 0,
          "name": "Post Run actions/setup-node@v2",
          "number": 15,
          "started_at": 1628159188000,
          "status": "completed",
        },
        {
          "completed_at": 1628159188000,
          "conclusion": "success",
          "duration": 0,
          "name": "Post Run actions/checkout@v2",
          "number": 16,
          "started_at": 1628159188000,
          "status": "completed",
        },
        {
          "completed_at": 1628159188000,
          "conclusion": "success",
          "duration": 0,
          "name": "Complete job",
          "number": 17,
          "started_at": 1628159188000,
          "status": "completed",
        },
      ],
      "workflow_name": "CodeQL",
    },
    "owner": "Octocoders",
    "repo": "Hello-World",
    "status": "success",
    "trigger_event_signature": "github::workflow_job",
  },
]
`;

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[2] INPUT 1`] = `
{
  "action": "completed",
  "organization": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/38302899?v=4",
    "description": "",
    "events_url": "https://api.github.com/orgs/Octocoders/events",
    "hooks_url": "https://api.github.com/orgs/Octocoders/hooks",
    "id": 38302899,
    "issues_url": "https://api.github.com/orgs/Octocoders/issues",
    "login": "Octocoders",
    "members_url": "https://api.github.com/orgs/Octocoders/members{/member}",
    "node_id": "MDEyOk9yZ2FuaXphdGlvbjM4MzAyODk5",
    "public_members_url": "https://api.github.com/orgs/Octocoders/public_members{/member}",
    "repos_url": "https://api.github.com/orgs/Octocoders/repos",
    "url": "https://api.github.com/orgs/Octocoders",
  },
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 0,
    "forks_count": 0,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": null,
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/38302899?v=4",
      "events_url": "https://api.github.com/users/Octocoders/events{/privacy}",
      "followers_url": "https://api.github.com/users/Octocoders/followers",
      "following_url": "https://api.github.com/users/Octocoders/following{/other_user}",
      "gists_url": "https://api.github.com/users/Octocoders/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Octocoders",
      "id": 38302899,
      "login": "Octocoders",
      "node_id": "MDEyOk9yZ2FuaXphdGlvbjM4MzAyODk5",
      "organizations_url": "https://api.github.com/users/Octocoders/orgs",
      "received_events_url": "https://api.github.com/users/Octocoders/received_events",
      "repos_url": "https://api.github.com/users/Octocoders/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Octocoders/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Octocoders/subscriptions",
      "type": "Organization",
      "url": "https://api.github.com/users/Octocoders",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:32Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:19:27Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
  "workflow_job": {
    "check_run_url": "https://api.github.com/repos/octo-org/octo-repo/check-runs/1291536064",
    "completed_at": "2021-08-05T10:38:16Z",
    "conclusion": "success",
    "created_at": "2021-08-05T10:33:58Z",
    "head_branch": "main",
    "head_sha": "3484a3fb816e0859fd6e1cea078d76385ff50625",
    "html_url": "https://github.com/octo-org/octo-repo/runs/1291536064",
    "id": 289782451,
    "labels": [
      "ubuntu-latest",
    ],
    "name": "linters",
    "node_id": "MDExOldvcmtmbG93UnVuMjg5NzgyNDUx",
    "run_attempt": 1,
    "run_id": 2202229078,
    "run_url": "https://api.github.com/repos/octo-org/octo-repo/actions/runs/1291536064",
    "runner_group_id": 2,
    "runner_group_name": "GitHub Actions",
    "runner_id": 5,
    "runner_name": "GitHub Actions 5",
    "started_at": "2021-08-05T10:34:58Z",
    "status": "completed",
    "steps": [
      {
        "completed_at": "2021-08-05T10:26:11.000Z",
        "conclusion": "success",
        "name": "Set up job",
        "number": 1,
        "started_at": "2021-08-05T10:26:08.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:11.000Z",
        "conclusion": "success",
        "name": "Checkout Repo",
        "number": 2,
        "started_at": "2021-08-05T10:26:11.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:15.000Z",
        "conclusion": "success",
        "name": "Install Ruby",
        "number": 3,
        "started_at": "2021-08-05T10:26:11.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:21.000Z",
        "conclusion": "success",
        "name": "Run Rubocop",
        "number": 4,
        "started_at": "2021-08-05T10:26:15.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:25.000Z",
        "conclusion": "success",
        "name": "Run Brakeman",
        "number": 5,
        "started_at": "2021-08-05T10:26:21.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:26.000Z",
        "conclusion": "success",
        "name": "Run Bundle Audit",
        "number": 6,
        "started_at": "2021-08-05T10:26:25.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:26.000Z",
        "conclusion": "success",
        "name": "Post Checkout Repo",
        "number": 12,
        "started_at": "2021-08-05T10:26:26.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2021-08-05T10:26:26.000Z",
        "conclusion": "success",
        "name": "Complete job",
        "number": 13,
        "started_at": "2021-08-05T10:26:26.000Z",
        "status": "completed",
      },
    ],
    "url": "https://api.github.com/repos/octo-org/octo-repo/actions/jobs/1291536064",
    "workflow_name": "CodeQL",
  },
}
`;

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[2] OUTPUT 1`] = `
[
  {
    "created_at": 1700000000000,
    "metric_signature": "workflow-job",
    "output": {
      "completed_at": 1628159896000,
      "created_at": 1628159638000,
      "duration": 198000,
      "run_attempt": 1,
      "started_at": 1628159698000,
      "status": "completed",
      "steps": [
        {
          "completed_at": 1628159171000,
          "conclusion": "success",
          "duration": 3000,
          "name": "Set up job",
          "number": 1,
          "started_at": 1628159168000,
          "status": "completed",
        },
        {
          "completed_at": 1628159171000,
          "conclusion": "success",
          "duration": 0,
          "name": "Checkout Repo",
          "number": 2,
          "started_at": 1628159171000,
          "status": "completed",
        },
        {
          "completed_at": 1628159175000,
          "conclusion": "success",
          "duration": 4000,
          "name": "Install Ruby",
          "number": 3,
          "started_at": 1628159171000,
          "status": "completed",
        },
        {
          "completed_at": 1628159181000,
          "conclusion": "success",
          "duration": 6000,
          "name": "Run Rubocop",
          "number": 4,
          "started_at": 1628159175000,
          "status": "completed",
        },
        {
          "completed_at": 1628159185000,
          "conclusion": "success",
          "duration": 4000,
          "name": "Run Brakeman",
          "number": 5,
          "started_at": 1628159181000,
          "status": "completed",
        },
        {
          "completed_at": 1628159186000,
          "conclusion": "success",
          "duration": 1000,
          "name": "Run Bundle Audit",
          "number": 6,
          "started_at": 1628159185000,
          "status": "completed",
        },
        {
          "completed_at": 1628159186000,
          "conclusion": "success",
          "duration": 0,
          "name": "Post Checkout Repo",
          "number": 12,
          "started_at": 1628159186000,
          "status": "completed",
        },
        {
          "completed_at": 1628159186000,
          "conclusion": "success",
          "duration": 0,
          "name": "Complete job",
          "number": 13,
          "started_at": 1628159186000,
          "status": "completed",
        },
      ],
      "workflow_name": "CodeQL",
    },
    "owner": "Octocoders",
    "repo": "Hello-World",
    "status": "success",
    "trigger_event_signature": "github::workflow_job",
  },
]
`;

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[3] INPUT 1`] = `
{
  "action": "in_progress",
  "installation": {
    "id": 1,
    "node_id": "MDIzOkludGVncmF0aW9uSW5zdGFsbGF0aW9uMQ==",
  },
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 0,
    "forks_count": 0,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": null,
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/38302899?v=4",
      "events_url": "https://api.github.com/users/Octocoders/events{/privacy}",
      "followers_url": "https://api.github.com/users/Octocoders/followers",
      "following_url": "https://api.github.com/users/Octocoders/following{/other_user}",
      "gists_url": "https://api.github.com/users/Octocoders/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Octocoders",
      "id": 38302899,
      "login": "Octocoders",
      "node_id": "MDEyOk9yZ2FuaXphdGlvbjM4MzAyODk5",
      "organizations_url": "https://api.github.com/users/Octocoders/orgs",
      "received_events_url": "https://api.github.com/users/Octocoders/received_events",
      "repos_url": "https://api.github.com/users/Octocoders/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Octocoders/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Octocoders/subscriptions",
      "type": "Organization",
      "url": "https://api.github.com/users/Octocoders",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:32Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:19:27Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
  "workflow_job": {
    "check_run_url": "https://api.github.com/repos/octo-org/octo-repo/check-runs/1291536064",
    "completed_at": null,
    "conclusion": null,
    "created_at": "2021-09-13T02:21:13Z",
    "head_branch": "main",
    "head_sha": "3484a3fb816e0859fd6e1cea078d76385ff50625",
    "html_url": "https://github.com/octo-org/octo-repo/runs/1291536064",
    "id": 289782451,
    "labels": [
      "ubuntu-latest",
    ],
    "name": "Analyze (javascript)",
    "node_id": "MDExOldvcmtmbG93UnVuMjg5NzgyNDUx",
    "run_attempt": 1,
    "run_id": 2202229078,
    "run_url": "https://api.github.com/repos/octo-org/octo-repo/actions/runs/1291536064",
    "runner_group_id": 2,
    "runner_group_name": "GitHub Actions",
    "runner_id": 5,
    "runner_name": "GitHub Actions 5",
    "started_at": "2021-09-13T02:21:13Z",
    "status": "in_progress",
    "steps": [
      {
        "completed_at": null,
        "conclusion": null,
        "name": "Set up job",
        "number": 1,
        "started_at": "2021-09-13T02:21:13Z",
        "status": "in_progress",
      },
    ],
    "url": "https://api.github.com/repos/octo-org/octo-repo/actions/jobs/1291536064",
    "workflow_name": "CodeQL",
  },
}
`;

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[3] OUTPUT 1`] = `undefined`;

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[4] INPUT 1`] = `
{
  "action": "in_progress",
  "installation": {
    "id": 3456996,
    "node_id": "MDIzOkludGVncmF0aW9uSW5zdGFsbGF0aW9uMzQ1Njk5Ng==",
  },
  "repository": {
    "allow_forking": true,
    "archive_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/branches{/branch}",
    "clone_url": "https://github.com/wolfy1339/github-events-schemas.git",
    "collaborators_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/comments{/number}",
    "commits_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/commits{/sha}",
    "compare_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/contributors",
    "created_at": "2022-01-07T20:57:03Z",
    "default_branch": "main",
    "deployments_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/downloads",
    "events_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/events",
    "fork": false,
    "forks": 0,
    "forks_count": 0,
    "forks_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/forks",
    "full_name": "wolfy1339/github-events-schemas",
    "git_commits_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/git/tags{/sha}",
    "git_url": "git://github.com/wolfy1339/github-events-schemas.git",
    "has_discussions": false,
    "has_downloads": true,
    "has_issues": true,
    "has_pages": false,
    "has_projects": true,
    "has_wiki": false,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/hooks",
    "html_url": "https://github.com/wolfy1339/github-events-schemas",
    "id": 445650657,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/issues{/number}",
    "keys_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/labels{/name}",
    "language": "TypeScript",
    "languages_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/languages",
    "license": {
      "key": "mit",
      "name": "MIT License",
      "node_id": "MDc6TGljZW5zZTEz",
      "spdx_id": "MIT",
      "url": "https://api.github.com/licenses/mit",
    },
    "merges_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/merges",
    "milestones_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/milestones{/number}",
    "mirror_url": null,
    "name": "github-events-schemas",
    "node_id": "R_kgDOGpAW4Q",
    "notifications_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/notifications{?since,all,participating}",
    "open_issues": 8,
    "open_issues_count": 8,
    "owner": {
      "avatar_url": "https://avatars.githubusercontent.com/u/4595477?v=4",
      "events_url": "https://api.github.com/users/wolfy1339/events{/privacy}",
      "followers_url": "https://api.github.com/users/wolfy1339/followers",
      "following_url": "https://api.github.com/users/wolfy1339/following{/other_user}",
      "gists_url": "https://api.github.com/users/wolfy1339/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/wolfy1339",
      "id": 4595477,
      "login": "wolfy1339",
      "node_id": "MDQ6VXNlcjQ1OTU0Nzc=",
      "organizations_url": "https://api.github.com/users/wolfy1339/orgs",
      "received_events_url": "https://api.github.com/users/wolfy1339/received_events",
      "repos_url": "https://api.github.com/users/wolfy1339/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/wolfy1339/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/wolfy1339/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/wolfy1339",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/pulls{/number}",
    "pushed_at": "2023-06-26T03:31:37Z",
    "releases_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/releases{/id}",
    "size": 196,
    "ssh_url": "git@github.com:wolfy1339/github-events-schemas.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/stargazers",
    "statuses_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/subscribers",
    "subscription_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/subscription",
    "svn_url": "https://github.com/wolfy1339/github-events-schemas",
    "tags_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/tags",
    "teams_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/git/trees{/sha}",
    "updated_at": "2022-01-08T03:16:54Z",
    "url": "https://api.github.com/repos/wolfy1339/github-events-schemas",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars.githubusercontent.com/in/2740?v=4",
    "events_url": "https://api.github.com/users/renovate%5Bbot%5D/events{/privacy}",
    "followers_url": "https://api.github.com/users/renovate%5Bbot%5D/followers",
    "following_url": "https://api.github.com/users/renovate%5Bbot%5D/following{/other_user}",
    "gists_url": "https://api.github.com/users/renovate%5Bbot%5D/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/apps/renovate",
    "id": 29139614,
    "login": "renovate[bot]",
    "node_id": "MDM6Qm90MjkxMzk2MTQ=",
    "organizations_url": "https://api.github.com/users/renovate%5Bbot%5D/orgs",
    "received_events_url": "https://api.github.com/users/renovate%5Bbot%5D/received_events",
    "repos_url": "https://api.github.com/users/renovate%5Bbot%5D/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/renovate%5Bbot%5D/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/renovate%5Bbot%5D/subscriptions",
    "type": "Bot",
    "url": "https://api.github.com/users/renovate%5Bbot%5D",
  },
  "workflow_job": {
    "check_run_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/check-runs/14541957942",
    "completed_at": null,
    "conclusion": null,
    "created_at": "2023-06-26T03:31:29Z",
    "head_branch": "renovate/got-13.x",
    "head_sha": "eeeb91cc89453bff9ce51f450d8badd4eb41ae8b",
    "html_url": "https://github.com/wolfy1339/github-events-schemas/actions/runs/5373506832/jobs/9747952373",
    "id": 14541957942,
    "labels": [
      "ubuntu-latest",
    ],
    "name": "Do examples need to be regenerated?",
    "node_id": "CR_kwDOGpAW4c8AAAADYsSrNg",
    "run_attempt": 1,
    "run_id": 5373506832,
    "run_url": "https://api.github.com/repos/wolfy1339/github-events-schemas/actions/runs/5373506832",
    "runner_group_id": 2,
    "runner_group_name": "GitHub Actions",
    "runner_id": 6,
    "runner_name": "GitHub Actions 6",
    "started_at": "2023-06-26T03:31:36Z",
    "status": "in_progress",
    "steps": [
      {
        "completed_at": "2023-06-26T03:31:36.000Z",
        "conclusion": "success",
        "name": "Set up job",
        "number": 1,
        "started_at": "2023-06-26T03:31:35.000Z",
        "status": "completed",
      },
      {
        "completed_at": "2023-06-26T03:31:37.000Z",
        "conclusion": "success",
        "name": "Run actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b",
        "number": 2,
        "started_at": "2023-06-26T03:31:36.000Z",
        "status": "completed",
      },
      {
        "completed_at": null,
        "conclusion": null,
        "name": "Run actions/setup-node@2fddd8803e2f5c9604345a0b591c3020ee971a93",
        "number": 3,
        "started_at": "2023-06-26T03:31:37.000Z",
        "status": "in_progress",
      },
      {
        "completed_at": null,
        "conclusion": null,
        "name": "Run npm ci",
        "number": 4,
        "started_at": null,
        "status": "queued",
      },
      {
        "completed_at": null,
        "conclusion": null,
        "name": "Run npm run build:events -- --check --cached",
        "number": 5,
        "started_at": null,
        "status": "queued",
      },
      {
        "completed_at": null,
        "conclusion": null,
        "name": "Run git status",
        "number": 6,
        "started_at": null,
        "status": "queued",
      },
      {
        "completed_at": null,
        "conclusion": null,
        "name": "Run git diff --exit-code || bash -c \\",
        "number": 7,
        "started_at": null,
        "status": "queued",
      },
      {
        "completed_at": null,
        "conclusion": null,
        "name": "Post Run actions/setup-node@2fddd8803e2f5c9604345a0b591c3020ee971a93",
        "number": 13,
        "started_at": null,
        "status": "queued",
      },
      {
        "completed_at": null,
        "conclusion": null,
        "name": "Post Run actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b",
        "number": 14,
        "started_at": null,
        "status": "queued",
      },
    ],
    "url": "https://api.github.com/repos/wolfy1339/github-events-schemas/actions/jobs/14541957942",
    "workflow_name": "Test",
  },
}
`;

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[4] OUTPUT 1`] = `undefined`;

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[5] INPUT 1`] = `
{
  "action": "queued",
  "installation": {
    "id": 3456996,
    "node_id": "MDIzOkludGVncmF0aW9uSW5zdGFsbGF0aW9uMzQ1Njk5Ng==",
  },
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 0,
    "forks_count": 0,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": null,
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/38302899?v=4",
      "events_url": "https://api.github.com/users/Octocoders/events{/privacy}",
      "followers_url": "https://api.github.com/users/Octocoders/followers",
      "following_url": "https://api.github.com/users/Octocoders/following{/other_user}",
      "gists_url": "https://api.github.com/users/Octocoders/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Octocoders",
      "id": 38302899,
      "login": "Octocoders",
      "node_id": "MDEyOk9yZ2FuaXphdGlvbjM4MzAyODk5",
      "organizations_url": "https://api.github.com/users/Octocoders/orgs",
      "received_events_url": "https://api.github.com/users/Octocoders/received_events",
      "repos_url": "https://api.github.com/users/Octocoders/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Octocoders/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Octocoders/subscriptions",
      "type": "Organization",
      "url": "https://api.github.com/users/Octocoders",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:32Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:19:27Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
  "workflow_job": {
    "check_run_url": "https://api.github.com/repos/octo-org/octo-repo/check-runs/1291536064",
    "completed_at": null,
    "conclusion": null,
    "created_at": "2021-09-13T02:21:13Z",
    "head_branch": "main",
    "head_sha": "3484a3fb816e0859fd6e1cea078d76385ff50625",
    "html_url": "https://github.com/octo-org/octo-repo/runs/1291536064",
    "id": 289782451,
    "labels": [
      "ubuntu-latest",
    ],
    "name": "update",
    "node_id": "MDExOldvcmtmbG93UnVuMjg5NzgyNDUx",
    "run_attempt": 1,
    "run_id": 2202229078,
    "run_url": "https://api.github.com/repos/octo-org/octo-repo/actions/runs/1291536064",
    "runner_group_id": 2,
    "runner_group_name": "GitHub Actions",
    "runner_id": 5,
    "runner_name": "GitHub Actions 5",
    "started_at": "2021-09-13T02:21:13Z",
    "status": "queued",
    "steps": [],
    "url": "https://api.github.com/repos/octo-org/octo-repo/actions/jobs/1291536064",
    "workflow_name": "CodeQL",
  },
}
`;

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[5] OUTPUT 1`] = `undefined`;

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[6] INPUT 1`] = `
{
  "action": "queued",
  "deployment": {
    "created_at": "2023-04-19T21:12:12Z",
    "creator": {
      "avatar_url": "https://avatars.githubusercontent.com/u/25349044?v=4",
      "events_url": "https://api.github.com/users/lineville/events{/privacy}",
      "followers_url": "https://api.github.com/users/lineville/followers",
      "following_url": "https://api.github.com/users/lineville/following{/other_user}",
      "gists_url": "https://api.github.com/users/lineville/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/lineville",
      "id": 25349044,
      "login": "lineville",
      "node_id": "MDQ6VXNlcjI1MzQ5MDQ0",
      "organizations_url": "https://api.github.com/users/lineville/orgs",
      "received_events_url": "https://api.github.com/users/lineville/received_events",
      "repos_url": "https://api.github.com/users/lineville/repos",
      "site_admin": true,
      "starred_url": "https://api.github.com/users/lineville/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/lineville/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/lineville",
    },
    "description": null,
    "environment": "Test",
    "id": 875096709,
    "node_id": "DE_kwDOI0B2Tc40KOqF",
    "original_environment": "Test",
    "payload": {},
    "performed_via_github_app": {
      "created_at": "2018-07-30T09:30:17Z",
      "description": "Automate your workflow from idea to production",
      "events": [
        "branch_protection_rule",
        "check_run",
        "check_suite",
        "create",
        "delete",
        "deployment",
        "deployment_status",
        "discussion",
        "discussion_comment",
        "fork",
        "gollum",
        "issues",
        "issue_comment",
        "label",
        "merge_group",
        "milestone",
        "page_build",
        "project",
        "project_card",
        "project_column",
        "public",
        "pull_request",
        "pull_request_review",
        "pull_request_review_comment",
        "push",
        "registry_package",
        "release",
        "repository",
        "repository_dispatch",
        "status",
        "watch",
        "workflow_dispatch",
        "workflow_run",
      ],
      "external_url": "https://help.github.com/en/actions",
      "html_url": "https://github.com/apps/github-actions",
      "id": 15368,
      "name": "GitHub Actions",
      "node_id": "MDM6QXBwMTUzNjg=",
      "owner": {
        "avatar_url": "https://avatars.githubusercontent.com/u/9919?v=4",
        "events_url": "https://api.github.com/users/github/events{/privacy}",
        "followers_url": "https://api.github.com/users/github/followers",
        "following_url": "https://api.github.com/users/github/following{/other_user}",
        "gists_url": "https://api.github.com/users/github/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/github",
        "id": 9919,
        "login": "github",
        "node_id": "MDEyOk9yZ2FuaXphdGlvbjk5MTk=",
        "organizations_url": "https://api.github.com/users/github/orgs",
        "received_events_url": "https://api.github.com/users/github/received_events",
        "repos_url": "https://api.github.com/users/github/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/github/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/github/subscriptions",
        "type": "Organization",
        "url": "https://api.github.com/users/github",
      },
      "permissions": {
        "actions": "write",
        "administration": "read",
        "checks": "write",
        "contents": "write",
        "deployments": "write",
        "discussions": "write",
        "issues": "write",
        "merge_queues": "write",
        "metadata": "read",
        "packages": "write",
        "pages": "write",
        "pull_requests": "write",
        "repository_hooks": "write",
        "repository_projects": "write",
        "security_events": "write",
        "statuses": "write",
        "vulnerability_alerts": "read",
      },
      "slug": "github-actions",
      "updated_at": "2019-12-10T19:04:12Z",
    },
    "production_environment": false,
    "ref": "main",
    "repository_url": "https://api.github.com/repos/lineville/elastic-machines-testing",
    "sha": "16c5286e8d9a0629956a28938386b36608707a71",
    "statuses_url": "https://api.github.com/repos/lineville/elastic-machines-testing/deployments/875096709/statuses",
    "task": "deploy",
    "transient_environment": false,
    "updated_at": "2023-04-19T21:12:14Z",
    "url": "https://api.github.com/repos/lineville/elastic-machines-testing/deployments/875096709",
  },
  "installation": {
    "id": 23154469,
    "node_id": "MDIzOkludGVncmF0aW9uSW5zdGFsbGF0aW9uMjMxNTQ0Njk=",
  },
  "repository": {
    "allow_forking": true,
    "archive_url": "https://api.github.com/repos/lineville/elastic-machines-testing/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/lineville/elastic-machines-testing/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/lineville/elastic-machines-testing/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/lineville/elastic-machines-testing/branches{/branch}",
    "clone_url": "https://github.com/lineville/elastic-machines-testing.git",
    "collaborators_url": "https://api.github.com/repos/lineville/elastic-machines-testing/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/lineville/elastic-machines-testing/comments{/number}",
    "commits_url": "https://api.github.com/repos/lineville/elastic-machines-testing/commits{/sha}",
    "compare_url": "https://api.github.com/repos/lineville/elastic-machines-testing/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/lineville/elastic-machines-testing/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/lineville/elastic-machines-testing/contributors",
    "created_at": "2023-01-20T18:23:59Z",
    "default_branch": "main",
    "deployments_url": "https://api.github.com/repos/lineville/elastic-machines-testing/deployments",
    "description": "Testing Repo to simulate load for Elastic Machines",
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/lineville/elastic-machines-testing/downloads",
    "events_url": "https://api.github.com/repos/lineville/elastic-machines-testing/events",
    "fork": false,
    "forks": 0,
    "forks_count": 0,
    "forks_url": "https://api.github.com/repos/lineville/elastic-machines-testing/forks",
    "full_name": "lineville/elastic-machines-testing",
    "git_commits_url": "https://api.github.com/repos/lineville/elastic-machines-testing/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/lineville/elastic-machines-testing/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/lineville/elastic-machines-testing/git/tags{/sha}",
    "git_url": "git://github.com/lineville/elastic-machines-testing.git",
    "has_discussions": false,
    "has_downloads": true,
    "has_issues": true,
    "has_pages": false,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/lineville/elastic-machines-testing/hooks",
    "html_url": "https://github.com/lineville/elastic-machines-testing",
    "id": 591427149,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/lineville/elastic-machines-testing/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/lineville/elastic-machines-testing/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/lineville/elastic-machines-testing/issues{/number}",
    "keys_url": "https://api.github.com/repos/lineville/elastic-machines-testing/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/lineville/elastic-machines-testing/labels{/name}",
    "language": null,
    "languages_url": "https://api.github.com/repos/lineville/elastic-machines-testing/languages",
    "license": {
      "key": "mit",
      "name": "MIT License",
      "node_id": "MDc6TGljZW5zZTEz",
      "spdx_id": "MIT",
      "url": "https://api.github.com/licenses/mit",
    },
    "merges_url": "https://api.github.com/repos/lineville/elastic-machines-testing/merges",
    "milestones_url": "https://api.github.com/repos/lineville/elastic-machines-testing/milestones{/number}",
    "mirror_url": null,
    "name": "elastic-machines-testing",
    "node_id": "R_kgDOI0B2TQ",
    "notifications_url": "https://api.github.com/repos/lineville/elastic-machines-testing/notifications{?since,all,participating}",
    "open_issues": 0,
    "open_issues_count": 0,
    "owner": {
      "avatar_url": "https://avatars.githubusercontent.com/u/25349044?v=4",
      "events_url": "https://api.github.com/users/lineville/events{/privacy}",
      "followers_url": "https://api.github.com/users/lineville/followers",
      "following_url": "https://api.github.com/users/lineville/following{/other_user}",
      "gists_url": "https://api.github.com/users/lineville/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/lineville",
      "id": 25349044,
      "login": "lineville",
      "node_id": "MDQ6VXNlcjI1MzQ5MDQ0",
      "organizations_url": "https://api.github.com/users/lineville/orgs",
      "received_events_url": "https://api.github.com/users/lineville/received_events",
      "repos_url": "https://api.github.com/users/lineville/repos",
      "site_admin": true,
      "starred_url": "https://api.github.com/users/lineville/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/lineville/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/lineville",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/lineville/elastic-machines-testing/pulls{/number}",
    "pushed_at": "2023-04-19T21:11:39Z",
    "releases_url": "https://api.github.com/repos/lineville/elastic-machines-testing/releases{/id}",
    "size": 39,
    "ssh_url": "git@github.com:lineville/elastic-machines-testing.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/lineville/elastic-machines-testing/stargazers",
    "statuses_url": "https://api.github.com/repos/lineville/elastic-machines-testing/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/lineville/elastic-machines-testing/subscribers",
    "subscription_url": "https://api.github.com/repos/lineville/elastic-machines-testing/subscription",
    "svn_url": "https://github.com/lineville/elastic-machines-testing",
    "tags_url": "https://api.github.com/repos/lineville/elastic-machines-testing/tags",
    "teams_url": "https://api.github.com/repos/lineville/elastic-machines-testing/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/lineville/elastic-machines-testing/git/trees{/sha}",
    "updated_at": "2023-01-20T18:23:59Z",
    "url": "https://api.github.com/repos/lineville/elastic-machines-testing",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars.githubusercontent.com/u/25349044?v=4",
    "events_url": "https://api.github.com/users/lineville/events{/privacy}",
    "followers_url": "https://api.github.com/users/lineville/followers",
    "following_url": "https://api.github.com/users/lineville/following{/other_user}",
    "gists_url": "https://api.github.com/users/lineville/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/lineville",
    "id": 25349044,
    "login": "lineville",
    "node_id": "MDQ6VXNlcjI1MzQ5MDQ0",
    "organizations_url": "https://api.github.com/users/lineville/orgs",
    "received_events_url": "https://api.github.com/users/lineville/received_events",
    "repos_url": "https://api.github.com/users/lineville/repos",
    "site_admin": true,
    "starred_url": "https://api.github.com/users/lineville/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/lineville/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/lineville",
  },
  "workflow_job": {
    "check_run_url": "https://api.github.com/repos/lineville/elastic-machines-testing/check-runs/12877621891",
    "completed_at": null,
    "conclusion": null,
    "created_at": "2023-04-19T21:12:12Z",
    "head_branch": "main",
    "head_sha": "16c5286e8d9a0629956a28938386b36608707a71",
    "html_url": "https://github.com/lineville/elastic-machines-testing/actions/runs/4747967848/jobs/8433573014",
    "id": 12877621891,
    "labels": [
      "self-hosted",
      "k8s",
    ],
    "name": "test",
    "node_id": "CR_kwDOI0B2Tc8AAAAC_5Dqgw",
    "run_attempt": 1,
    "run_id": 4747967848,
    "run_url": "https://api.github.com/repos/lineville/elastic-machines-testing/actions/runs/4747967848",
    "runner_group_id": null,
    "runner_group_name": null,
    "runner_id": null,
    "runner_name": null,
    "started_at": "2023-04-19T21:12:12Z",
    "status": "waiting",
    "steps": [],
    "url": "https://api.github.com/repos/lineville/elastic-machines-testing/actions/jobs/12877621891",
    "workflow_name": "Env Test",
  },
}
`;

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[6] OUTPUT 1`] = `undefined`;

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[7] INPUT 1`] = `
{
  "action": "waiting",
  "installation": {
    "id": 23154469,
    "node_id": "MDIzOkludGVncmF0aW9uSW5zdGFsbGF0aW9uMjMxNTQ0Njk=",
  },
  "repository": {
    "allow_forking": true,
    "archive_url": "https://api.github.com/repos/lineville/elastic-machines-testing/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/lineville/elastic-machines-testing/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/lineville/elastic-machines-testing/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/lineville/elastic-machines-testing/branches{/branch}",
    "clone_url": "https://github.com/lineville/elastic-machines-testing.git",
    "collaborators_url": "https://api.github.com/repos/lineville/elastic-machines-testing/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/lineville/elastic-machines-testing/comments{/number}",
    "commits_url": "https://api.github.com/repos/lineville/elastic-machines-testing/commits{/sha}",
    "compare_url": "https://api.github.com/repos/lineville/elastic-machines-testing/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/lineville/elastic-machines-testing/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/lineville/elastic-machines-testing/contributors",
    "created_at": "2023-01-20T18:23:59Z",
    "default_branch": "main",
    "deployments_url": "https://api.github.com/repos/lineville/elastic-machines-testing/deployments",
    "description": "Testing Repo to simulate load for Elastic Machines",
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/lineville/elastic-machines-testing/downloads",
    "events_url": "https://api.github.com/repos/lineville/elastic-machines-testing/events",
    "fork": false,
    "forks": 0,
    "forks_count": 0,
    "forks_url": "https://api.github.com/repos/lineville/elastic-machines-testing/forks",
    "full_name": "lineville/elastic-machines-testing",
    "git_commits_url": "https://api.github.com/repos/lineville/elastic-machines-testing/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/lineville/elastic-machines-testing/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/lineville/elastic-machines-testing/git/tags{/sha}",
    "git_url": "git://github.com/lineville/elastic-machines-testing.git",
    "has_discussions": false,
    "has_downloads": true,
    "has_issues": true,
    "has_pages": false,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/lineville/elastic-machines-testing/hooks",
    "html_url": "https://github.com/lineville/elastic-machines-testing",
    "id": 591427149,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/lineville/elastic-machines-testing/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/lineville/elastic-machines-testing/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/lineville/elastic-machines-testing/issues{/number}",
    "keys_url": "https://api.github.com/repos/lineville/elastic-machines-testing/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/lineville/elastic-machines-testing/labels{/name}",
    "language": null,
    "languages_url": "https://api.github.com/repos/lineville/elastic-machines-testing/languages",
    "license": {
      "key": "mit",
      "name": "MIT License",
      "node_id": "MDc6TGljZW5zZTEz",
      "spdx_id": "MIT",
      "url": "https://api.github.com/licenses/mit",
    },
    "merges_url": "https://api.github.com/repos/lineville/elastic-machines-testing/merges",
    "milestones_url": "https://api.github.com/repos/lineville/elastic-machines-testing/milestones{/number}",
    "mirror_url": null,
    "name": "elastic-machines-testing",
    "node_id": "R_kgDOI0B2TQ",
    "notifications_url": "https://api.github.com/repos/lineville/elastic-machines-testing/notifications{?since,all,participating}",
    "open_issues": 0,
    "open_issues_count": 0,
    "owner": {
      "avatar_url": "https://avatars.githubusercontent.com/u/25349044?v=4",
      "events_url": "https://api.github.com/users/lineville/events{/privacy}",
      "followers_url": "https://api.github.com/users/lineville/followers",
      "following_url": "https://api.github.com/users/lineville/following{/other_user}",
      "gists_url": "https://api.github.com/users/lineville/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/lineville",
      "id": 25349044,
      "login": "lineville",
      "node_id": "MDQ6VXNlcjI1MzQ5MDQ0",
      "organizations_url": "https://api.github.com/users/lineville/orgs",
      "received_events_url": "https://api.github.com/users/lineville/received_events",
      "repos_url": "https://api.github.com/users/lineville/repos",
      "site_admin": true,
      "starred_url": "https://api.github.com/users/lineville/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/lineville/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/lineville",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/lineville/elastic-machines-testing/pulls{/number}",
    "pushed_at": "2023-04-19T21:11:39Z",
    "releases_url": "https://api.github.com/repos/lineville/elastic-machines-testing/releases{/id}",
    "size": 39,
    "ssh_url": "git@github.com:lineville/elastic-machines-testing.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/lineville/elastic-machines-testing/stargazers",
    "statuses_url": "https://api.github.com/repos/lineville/elastic-machines-testing/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/lineville/elastic-machines-testing/subscribers",
    "subscription_url": "https://api.github.com/repos/lineville/elastic-machines-testing/subscription",
    "svn_url": "https://github.com/lineville/elastic-machines-testing",
    "tags_url": "https://api.github.com/repos/lineville/elastic-machines-testing/tags",
    "teams_url": "https://api.github.com/repos/lineville/elastic-machines-testing/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/lineville/elastic-machines-testing/git/trees{/sha}",
    "updated_at": "2023-01-20T18:23:59Z",
    "url": "https://api.github.com/repos/lineville/elastic-machines-testing",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars.githubusercontent.com/u/25349044?v=4",
    "events_url": "https://api.github.com/users/lineville/events{/privacy}",
    "followers_url": "https://api.github.com/users/lineville/followers",
    "following_url": "https://api.github.com/users/lineville/following{/other_user}",
    "gists_url": "https://api.github.com/users/lineville/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/lineville",
    "id": 25349044,
    "login": "lineville",
    "node_id": "MDQ6VXNlcjI1MzQ5MDQ0",
    "organizations_url": "https://api.github.com/users/lineville/orgs",
    "received_events_url": "https://api.github.com/users/lineville/received_events",
    "repos_url": "https://api.github.com/users/lineville/repos",
    "site_admin": true,
    "starred_url": "https://api.github.com/users/lineville/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/lineville/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/lineville",
  },
  "workflow_job": {
    "check_run_url": "https://api.github.com/repos/lineville/elastic-machines-testing/check-runs/12877621891",
    "completed_at": null,
    "conclusion": null,
    "created_at": "2023-04-19T21:12:12Z",
    "head_branch": "main",
    "head_sha": "16c5286e8d9a0629956a28938386b36608707a71",
    "html_url": "https://github.com/lineville/elastic-machines-testing/actions/runs/4747967848/jobs/8433573014",
    "id": 12877621891,
    "labels": [
      "self-hosted",
      "k8s",
    ],
    "name": "test",
    "node_id": "CR_kwDOI0B2Tc8AAAAC_5Dqgw",
    "run_attempt": 1,
    "run_id": 4747967848,
    "run_url": "https://api.github.com/repos/lineville/elastic-machines-testing/actions/runs/4747967848",
    "runner_group_id": null,
    "runner_group_name": null,
    "runner_id": null,
    "runner_name": null,
    "started_at": "2023-04-19T21:12:12Z",
    "status": "waiting",
    "steps": [],
    "url": "https://api.github.com/repos/lineville/elastic-machines-testing/actions/jobs/12877621891",
    "workflow_name": "Env Test",
  },
}
`;

exports[`workflows handles a range of mocked workflow_job events: workflow_job fixture[7] OUTPUT 1`] = `undefined`;
